--- a/lessons/babel-webpack/package.json
+++ b/lessons/babel-webpack/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d build"
+    "build": "babel src -d build",
+    "bundle": "webpack --mode development"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "7.13.14",
     "@babel/core": "7.13.14",
-    "@babel/preset-env": "7.13.12"
+    "@babel/preset-env": "7.13.12",
+    "babel-loader": "8.2.2",
+    "webpack": "5.30.0",
+    "webpack-cli": "4.6.0"
   }
 }
