--- a/extra-lessons/babel-webpack/package.json
+++ b/extra-lessons/babel-webpack/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/cli": "7.13.14",
     "@babel/core": "7.13.14",
+    "@babel/plugin-proposal-pipeline-operator": "7.12.13",
     "@babel/preset-env": "7.13.12",
     "babel-loader": "8.2.2",
     "html-webpack-plugin": "5.3.1",
