- add readme with post-lesson notes - fix webpack bundle hash usage - add bundle:dev and bundle:prod scripts

--- a/extra-lessons/babel-webpack/package.json
+++ b/extra-lessons/babel-webpack/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d build",
-    "bundle": "webpack --mode development"
+    "bundle:dev": "webpack --mode development",
+    "bundle:prod": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
